carousel overlap fix

--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -186,12 +186,11 @@
   &__impact {
     margin-top: 3rem;
     background-color: $color-carrot;
-    height: 50vh;
-    padding-top: 12rem;
+    height: 100;
+    padding-bottom: 10rem;
 
     .carousel {
       background-color: transparent;
-      margin-top: -5rem;
     }
   }
 
